@@ -8,7 +8,7 @@
     <parent>
         <groupId>io.github.tky0065</groupId>
         <artifactId>springflow-parent</artifactId>
-        <version>0.3.2</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>springflow-demo</artifactId>
@@ -85,6 +85,11 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>0.2.0</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
@@ -99,6 +104,11 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <jvmArguments>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </jvmArguments>
                 </configuration>
             </plugin>
 
